fixed layout issues of the dashboard across resolutions

--- a/web/src/components/summary/summaryCard/summary-card.module.scss
+++ b/web/src/components/summary/summaryCard/summary-card.module.scss
@@ -1,5 +1,4 @@
 .summaryCard {
-  flex-grow: 1;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
